# exclusion-auditor

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  false_positive.md  feature_request.md  new_rule.md
.github/workflows/: ci.yml  codeql.yml
data/: interpreters.yml  lolbins.yml  writable-paths.yml
docs/: ADAPTERS.md  CONFIGURATION.md  ENTERPRISE.md  RULE-SCHEMA.md  SHARING.md
examples/: crowdstrike.yaml  demo.yaml  sample-exclusions.json  suppressions.yml
exclusion_auditor/: __init__.py  cli.py  config.py  datarefs.py  engine.py  matchers.py  models.py  paths.py  precheck.py  redact.py  report.py  rules.py  suppressions.py  verify_share.py
exclusion_auditor/adapters/: __init__.py  base.py  crowdstrike.py  import_adapter.py
rules/: extension-exclusions.yml  path-exclusions.yml  process-exclusions.yml  scope-and-hygiene.yml
tests/: test_crowdstrike.py  test_engine.py  test_path001_calibration.py  test_paths_prefix.py  test_precheck.py  test_redact.py  test_redact_safety.py  test_salt_file.py  test_summary_only.py  test_verify_share.py
