[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "exclusion-auditor"
version = "0.1.0"
description = "Read-only NGAV/EDR exclusion risk and hygiene auditor (CrowdStrike-first, vendor-agnostic)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Justin Hickman", email = "jch1689@mail.com" },
]
keywords = ["security", "edr", "ngav", "crowdstrike", "exclusions", "detection-engineering"]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# CrowdStrike adapter (added in a later milestone)
crowdstrike = ["crowdstrike-falconpy>=1.3"]
dev = ["pytest>=7.0"]

[project.scripts]
exclusion-auditor = "exclusion_auditor.cli:main"

[tool.setuptools]
packages = ["exclusion_auditor", "exclusion_auditor.adapters"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Disable the cache: the project lives on a synced drive where pytest can't
# create its cache dir (WinError 5).
addopts = "-p no:cacheprovider"
